src/style.css
/* ... */
.navbar-toggler span {
  display: inline-block !important;
  /* background-color: #be50f4 !important; */
  /* background-color: #ffd37b !important; */
  height: 5px !important;
  width: 30px !important;
  /* margin-top: 5px !important; */
  margin-bottom: 5px !important;
  transform: rotate(0deg) !important;
  left: 0 !important;
  opacity: 1 !important;
}

.navbar-toggler:focus,
.navbar-toggler:active {
  outline: 0 !important;
}

.navbar-toggler span:nth-child(1),
.navbar-toggler span:nth-child(3) {
  transition: transform 0.35s ease-in-out !important;
  transition: transform 0.35s ease-in-out !important;
}

.navbar-toggler:not(.collapsed) span:nth-child(1) {
  position: absolute !important;
  left: 12px !important;
  top: 10px !important;
  transform: rotate(135deg) !important;
  opacity: 0.9 !important;
}

.navbar-toggler:not(.collapsed) span:nth-child(2) {
  height: 12px !important;
  visibility: hidden !important;
  background-color: transparent !important;
}

.navbar-toggler:not(.collapsed) span:nth-child(3) {
  position: absolute !important;
  left: 12px !important;
  top: 10px !important;
  transform: rotate(-135deg) !important;
  opacity: 0.9 !important;
}

@media (max-width: 767px) {
  .navbar {
    padding: 1rem 2rem !important;
    font-size: 1.4rem !important;
    /* background-color: #181a27 !important; */
  }
  .navbar-nav .nav-item a::after {
    display: none !important;
  }
}
.navbar-brand {
  color: rgb(254, 255, 200) !important;
}

.logo {
  height: 1.5em !important;
  width: 2.5em !important;
}

.navbar-nav .nav-link {
  color: white !important;
  padding-right: 1rem !important;
  padding-left: 1rem !important;
}
.nav-link:hover {
  color: #ffd37b !important;
  transition: all 0.3s ease-out 1s;
}

.nav-link {
  padding: 0.8rem 1rem !important;
}

@media (max-width: 767px) {
  .nav-link {
    padding: 1rem 1rem !important;
    margin: auto !important;
  }
}

.navbar-nav .nav-item {
  position: relative;
  margin: auto !important;
}

.navbar-nav .nav-item a {
  font-weight: 400;
  transition: all 0.3s ease-out 0s;
  position: relative;
  z-index: 1;
}

.navbar-nav .nav-item a::after {
  content: "";
  position: relative;
  display: block;
  height: 5px;
  width: 0;
  border-radius: 16px;
  /* background: #c95bf5; */
  /* light orange: #ffd37b
    dark orange: #ffd37b66 */
  background: #ffd37b66;
  bottom: 1px;
  left: 0;
  z-index: -1;
  transition: all 0.3s ease-out 0s;
}

.navbar-nav .nav-item a:hover::after {
  width: 100%;
}
/* ========= */ /* ========= */
/* --------- */
/* Home section */
/* --------- */
.wave {
  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
  animation-duration: 1.5s; /* Change to speed up or slow down */
  animation-iteration-count: infinite; /* Never stop waving :) */
  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
  display: inline-block;
}

@keyframes wave-animation {
  0% {
    transform: rotate(0deg);
  }
  10% {
    transform: rotate(14deg);
  } /* The following five values can be played with to make the waving more or less extreme */
  20% {
    transform: rotate(-8deg);
  }
  30% {
    transform: rotate(14deg);
  }
  40% {
    transform: rotate(-4deg);
  }
  50% {
    transform: rotate(10deg);
  }
  60% {
    transform: rotate(0deg);
  } /* Reset for the last half to pause */
  100% {
    transform: rotate(0deg);
  }
}
#tsparticles {
  position: fixed !important;
  background-repeat: no-repeat !important;
  background-size: cover !important;
}

.home-header {
  padding-top: 20px !important;
  transition: opacity 0.5s ease, transform 0.5s ease;
}

.home-section {
  position: relative;
  background-color: rgb(2, 2, 2);
  background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
  background-position: top center !important;
  background-repeat: repeat !important;
  padding-bottom: 0px !important;
  padding-top: 0px !important;
  transition: opacity 0.5s ease, transform 0.5s ease;
}

.home-content {
  /* padding: 7rem 0 2rem !important; */
  color: whitesmoke;
  text-align: center;
  display: table;
  margin: auto !important;
}

.home-content-mid {
  padding: 7rem 0 2rem !important;
  color: whitesmoke;
  text-align: center;
}

.heading {
  font-size: 1.8em !important;
  padding-left: 2px !important;
  margin-bottom: 30px !important;
}
@media (max-width: 1092px) {
  .heading {
    font-size: 1.2em !important;
  }
}

.heading-name {
  font-size: 1.2em !important;
  padding-left: 2px !important;
  text-align: center;
  margin-bottom: 20px !important;
}

.main-name {
  /* light orange: #ffd37b
    dark orange: #ffd37b66 */
  /* color: #cd5ff8; */
  color: #ffd37b;
  font-size: 0.9em;
  margin-top: 12px !important;
}

.Typewriter__wrapper {
  font-size: 1.2em !important;
  font-weight: 50 !important;
  position: absolute !important;
  display: inline-block !important;
}
.Typewriter__cursor {
  display: none !important;
}

@media (max-width: 767px) {
  .Typewriter__wrapper {
    font-size: 1.2em !important;
    font-weight: 50 !important;
    position: absolute !important;
    display: inline-block !important;
  }
  .Typewriter__cursor {
    display: none !important;
  }
}

.myAvtar {
  justify-content: center !important;
  padding-top: 9em !important;
}

@media (max-width: 767px) {
  .myAvtar {
    padding-top: 2em !important;
    padding-bottom: 2em !important;
  }
}

.home-about-section {
  /* set index to 1 to hover
  correctly */
  position: relative;
  margin: auto;
  height: 100vh;
  /* background-image: var(--section-background-color) !important; */
  /* background-color: black; */
  background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
  background-position: top center;
  padding-bottom: 70px !important;
  padding-top: 70px !important;
  z-index: 1;
}

.home-about-description {
  color: white !important;
  padding-top: 100px !important;
  padding-bottom: 20px !important;
  text-align: center;
}
/* ... */

